Fixes #490 Related searches size changed and aligned
Fix skew issue

--- a/src/app/infobox/infobox.component.css
+++ b/src/app/infobox/infobox.component.css
@@ -35,7 +35,9 @@ h3 {
 a {
   color: #1a0dab;
   text-decoration: none;
-  margin-left: -11px;
+  margin-left: -14px;
+  font-size: 13px;
+  font-family: Arial, sans-serif;
 }
 
 /** Screen Responsiveness **/
