--- a/src/app/related-search/related-search.component.css
+++ b/src/app/related-search/related-search.component.css
@@ -3,11 +3,23 @@
   padding-top: 10px;
   max-width: 450px;
 }
-.h3{
-  padding-bottom: 1%;
+
+.container {
+  margin-right: 0px;
+  margin-left: -7px;
+  padding-left: 0px;
+  padding-right: 0px;
 }
+
+.heading {
+  padding-bottom: 8px;
+  color: #222;
+  font-size: 18px;
+  font-family: Arial, sans-serif;
+}
+
 .related{
-  padding: 3px 32px 3px 0;
+  margin-top: 10px;
   display: inline-block;
   width: 180px;
   float: left;
@@ -17,8 +29,9 @@
   color: #1a0dab;
   text-decoration: none;
   font-family: Arial, sans-serif;
-  font-size: 13px;
+  font-size: 14px;
 }
+
 .rellink:hover{
   text-decoration: underline;
 }
