--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -303,9 +303,10 @@ a {
 }
 
 #pag-bar {
-  padding-left: 60px;
   padding-top: 20px;
   width: 100%;
+  margin-top: -24px;
+  margin-left: 200px;
 }
 
 .pagination-property {
@@ -336,21 +337,26 @@ a {
   font-size: medium;
   font-weight: normal;
 }
+
 .noResults >p{
   margin-top: 10px;
   margin-bottom: 15px;
 }
+
 .noResults >ul{
   padding-left: 16px;
 }
+
 .noResults >ul> li {
   padding-top: 0;
   padding-bottom: 18px;
 }
+
 .noResults em{
   font-weight: bold;
   font-style: normal;
 }
+
 @media screen and (min-width:1920px) {
   #tools {
     margin-left: 27%;
@@ -398,7 +404,6 @@ a {
     margin-left: 6.2%;
   }
 }
-
 
 @media screen and (max-width:979px) {
   #search-options {
@@ -463,7 +468,6 @@ a {
   .result {
     margin-left: 13%;
   }
-
 }
 
 @media screen and (max-width:639px) {
@@ -477,7 +481,6 @@ a {
     margin-left: 12%;
     padding-right: 20px;
   }
-
   #pag-bar {
     padding-left: 30px;
   }
@@ -503,4 +506,3 @@ a {
     padding: 0px 5.6% 12px;
   }
 }
-
